perf: optimized generic version

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,11 +1,17 @@
 find_package(OpenCV COMPONENTS core imgcodecs imgproc img_hash REQUIRED)
 
-add_executable(main "main.cpp")
-target_include_directories(main PRIVATE "../include" ${OpenCV_INCLUDE_DIRS})
-target_link_libraries(main PRIVATE ${OpenCV_LIBS})
-target_compile_features(main PRIVATE cxx_std_20)
+function(igh_add_exec exec_name)
+    add_executable(${exec_name} ${ARGV})
+    target_include_directories(${exec_name} PRIVATE "../include" ${OpenCV_INCLUDE_DIRS})
+    target_link_libraries(${exec_name} PRIVATE ${OpenCV_LIBS})
+    target_compile_features(${exec_name} PRIVATE cxx_std_20)
 
-add_executable(gpttest "gpttest.cpp")
-target_include_directories(gpttest PRIVATE "../include" ${OpenCV_INCLUDE_DIRS})
-target_link_libraries(gpttest PRIVATE ${OpenCV_LIBS})
-target_compile_features(gpttest PRIVATE cxx_std_20)
+    if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
+        target_compile_options(${exec_name} PRIVATE "/arch:AVX2" "/Wall" "/Ox")
+    else()
+        target_compile_options(${exec_name} PRIVATE "-mavx2")
+    endif()
+endfunction()
+
+igh_add_exec(main "main.cpp")
+igh_add_exec(gpttest "gpttest.cpp")
