feat: split bench for cmp

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -9,9 +9,10 @@ function(igh_add_exec exec_name)
     if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
         target_compile_options(${exec_name} PRIVATE "/Wall")
     else()
-        target_compile_options(${exec_name} PRIVATE "-mavx2")
+        target_compile_options(${exec_name} PRIVATE "-Wall" "-Wextra")
     endif()
 endfunction()
 
-igh_add_exec(main "main.cpp")
+igh_add_exec(bench_this "bench_this.cpp")
+igh_add_exec(bench_ocv "bench_ocv.cpp")
 igh_add_exec(gpttest "gpttest.cpp")
