fix: gcc failed without `-mavx2`

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -5,10 +5,10 @@ function(igh_add_exec exec_name)
     target_compile_features(${exec_name} PRIVATE cxx_std_20)
 
     if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
-        target_compile_options(${exec_name} PRIVATE "/Wall")
-    else()
-        target_compile_options(${exec_name} PRIVATE "-Wall" "-Wextra")
-    endif()
+        target_compile_options(${exec_name} PRIVATE "/arch:AVX2" "/Wall")
+    else ()
+        target_compile_options(${exec_name} PRIVATE "-mavx2" "-Wall" "-Wextra")
+    endif ()
 endfunction()
 
 igh_add_exec(bench_this "bench_this.cpp")
